--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>CineHope</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body>
+    <body style="display:none;">
         <nav>
             <div class="left-nav-item">
                 <div class="nav-item-container">
@@ -22,7 +22,7 @@
  
         </header>
 
-        <div  align="center">
+        <div align="center">
             <div class="content">
                 <span class="light-grey-text">ROYAL-Rs. 600.00</span><br><hr>
                 <div class="seats" id="seats-royal"  seatrow="1" seatcol="18"></div>
